# OmniBrew

./: .gitignore  CMakeLists.txt  build.bat
Assets/Shaders/: testShader.frag
include/MultiEngine/: MultiEngine.hpp
include/MultiEngine/Cores/GraphicsCore/: GraphicsCore.hpp  GraphicsCoreWindows.hpp  ResourceManager.hpp
include/MultiEngine/Cores/GraphicsCore/Shaders/: Shader.hpp  ShaderFactory.hpp  ShaderWindows.hpp
include/MultiEngine/Cores/SystemCore/: SystemCore.hpp  SystemCoreWindows.hpp
include/MultiEngine/Math/: MathMacros.hpp  Vector2.hpp  Vector3.hpp
include/OmniBrew/: InfoMacros.hpp  OmniBrew.hpp
include/OmniBrew/Cores/: CoreEnums.hpp
include/OmniBrew/Cores/AssetCore/Common/: AssetCore.hpp
include/OmniBrew/Cores/GraphicsCore/: GraphicsCore.hpp  ResourceManager.hpp
include/OmniBrew/Cores/SystemCore/: SystemCoreWindows.hpp
include/OmniBrew/Cores/SystemCore/Common/: SystemCore.hpp
include/OmniBrew/Math/: Color.hpp  Vector3.hpp  Vector4.hpp
includeConfigs/: platformSettings.hdef
libraries/include/glad/: glad.h
libraries/sources/GLAD/: glad.c
source/: main.cpp
source/MultiEngine/: MultiEngine.cpp
source/MultiEngine/Cores/GraphicsCore/: GraphicsCoreWindows.cpp  ResourceManager.cpp
source/MultiEngine/Cores/SystemCore/: SystemCore.cpp  SystemCoreWindows.cpp
source/MultiEngine/Math/: Vector2.cpp  Vector3.cpp
source/OmniBrew/: OmniBrew.cpp
source/OmniBrew/Cores/GraphicsCore/: GraphicsCoreWindows.cpp  ResourceManager.cpp
source/OmniBrew/Cores/SystemCore/: SystemCore.cpp  SystemCoreWindows.cpp
source/OmniBrew/Math/: Color.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
(+31 files in other folders)
